ghost-blog/ghost-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  labels:
    name: ghost
