ghost-blog/ghost-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ghost-ingress
  namespace: ghost
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ghost.demo.com`)
      kind: Rule
      services:
      - name: ghost-svc
        namespace: ghost
        port: 2368
